Table users {

  id int [primary key]
  email varchar [unique]
  username varchar
  password varchar
  role varchar
  created_at timestamp
  updated_at timestamp
 
}

Table patients {

 id int [primary key]
 patient_id varchar [unique]
 name varchar
 age int 
 gender varchar
 phone varchar
 email varchar [unique]
 address varchar 
 emergency_contact varchar
 registration_date date 
 created_at timestamp
 updated_at timestamp

 }

 Table doctors {

 id int [primary key]
 doctor_id varchar [unique]
 name varchar 
 specialization varchar
 phone int 
 email varchar [unique]
 qualification varchar
 consultation_fee int
 joining_date date
 status varchar
 created_at timestamp
 updated_at timestamp
 }


 Table doctor_availability {
 
 id int [primary key]
 doctor_id int [ref: > doctors.id]   
 working_day varchar
 start_time time
 end_time time

 
 
 }


 Table doctor_leave {

 id int [primary key]
 doctor_id int [ref: > doctors.id]
 leave_date date
 reason varchar
 created_at timestamp
 updated_at timestamp
}

Table appointments {

 id int [primary key]
 patient_id int [ref: > patients.id]
 doctor_id int [ref: > doctors.id]
 appointment_date date
 appointment_time time
 reason varchar
 status varchar
 created_at timestamp
 updated_at timestamp

 }

 Table clinic_settings {

 id int [primary key]
 clinic_name varchar
 address varchar
 phone int
 slot_duration time

 }

 


